--- a/user.html
+++ b/user.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -15,6 +15,7 @@
 		.mui-table-view-cell{
 			display: block;
 			padding: 11px 15px!important;
+			white-space:nowrap;
 		}
 		.fot-icon {
 		    width: 22px;
