--- a/user.html
+++ b/user.html
@@ -17,6 +17,9 @@
 			padding: 11px 15px!important;
 			white-space:nowrap;
 		}
+		.my-navigate-right{
+			width: 85%!important;
+		}
 		.fot-icon {
 		    width: 22px;
 		    height: 22px;
