--- a/pages/user/order_cargo.html
+++ b/pages/user/order_cargo.html
@@ -26,11 +26,11 @@
             font-size: 14px;
             margin: 0;
             padding: 0;
-            width: 80%!important;
+            width: 100%!important;
             border:0;
         }
         .mui-table-view-cell > div:first-child{
-            width: 80px;
+            width: 100px;
         }
         .out_line{
             margin-top: 0!important;
@@ -82,7 +82,7 @@
     <ul class="mui-table-view">
         <li class="mui-table-view-cell">
             <div>数量</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="number" class="tel" placeholder="输入兑换数量"/>
             </div>
         </li>
@@ -94,13 +94,13 @@
         </li>
         <li class="mui-table-view-cell">
             <div>联系人</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="persion" placeholder="输入联系人"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div >联系电话</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="number" class="tel" placeholder="输入手机号"/>
             </div>
         </li>
