--- a/pages/user/real_name.html
+++ b/pages/user/real_name.html
@@ -25,11 +25,11 @@
             font-size: 14px;
             margin: 0;
             padding: 0;
-            width: 80%!important;
+            width: 100%!important;
             border:0;
         }
         .mui-table-view-cell > div:first-child{
-            width: 80px;
+            width: 100px;
         }
         ul,li{
             list-style-type: none;
@@ -70,31 +70,31 @@
         </li>
         <li class="mui-table-view-cell">
             <div >真实姓名</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="name" placeholder="输入真实姓名"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>性　　别</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="sex" placeholder="输入性别"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>银　　行</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="bank" placeholder="银行"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>分行信息</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="bank_info" placeholder="分行信息"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>银行卡号</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="bank_card" placeholder="填写银行卡号"/>
             </div>
         </li>
