--- a/pages/user/set_pass.html
+++ b/pages/user/set_pass.html
@@ -24,7 +24,7 @@
             font-size: 14px;
             margin: 0;
             padding: 0;
-            width: 80%!important;
+            width: 100%!important;
             border:0;
         }
         .mui-table-view-cell > div:first-child{
@@ -43,16 +43,16 @@
     <div class="mui-table-view-cell my-title">
         <div class="fl">修改密码</div>
     </div>
-    <ul class="mui-table-view" style="margin-top: 0;">
+    <ul class="mui-table-view " style="margin-top: 0;">
         <li class="mui-table-view-cell">
             <div >原密码</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="password" class="out_pass" placeholder="输入原密码"/>
             </div>
         </li>
-        <li class="mui-table-view-cell">
+        <li class="mui-table-view-cell ">
             <div>新密码</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="password" class="new_pass" placeholder="输入新密码"/>
             </div>
         </li>
