--- a/pages/user/addr.html
+++ b/pages/user/addr.html
@@ -25,11 +25,11 @@
             font-size: 14px;
             margin: 0;
             padding: 0;
-            width: 80%!important;
+            width: 100%!important;
             border:0;
         }
         .mui-table-view-cell > div:first-child{
-            width: 80px;
+            width: 100px;
         }
 
         ul,li{
@@ -55,31 +55,31 @@
     <ul class="mui-table-view" style="margin-top: 0;">
         <li class="mui-table-view-cell">
             <div>姓名</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="name" placeholder="输入姓名"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div >联系电话</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="number" class="tel" placeholder="输入手机号"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>所在省份</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="province" placeholder="输入省份"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>所在城市</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="city" placeholder="输入城市"/>
             </div>
         </li>
         <li class="mui-table-view-cell">
             <div>所在地区</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="text" class="area" placeholder="输入地区"/>
             </div>
         </li>
