--- a/pages/user/posit.html
+++ b/pages/user/posit.html
@@ -26,11 +26,11 @@
             font-size: 14px;
             margin: 0;
             padding: 0;
-            width: 80%!important;
+            width: 100%!important;
             border:0;
         }
         .mui-table-view-cell > div:first-child{
-            width: 80px;
+            width: 100px;
         }
         .hint{
             font-size: 12px;
@@ -54,7 +54,7 @@
     <ul class="mui-table-view" style="margin-top: 0;">
         <li class="mui-table-view-cell">
             <div >提现金额</div>
-            <div class="col_333">
+            <div class="col_333 width100">
                 <input type="number" class="withdraw" placeholder="输入提现金额"/>
             </div>
         </li>
