--- a/user.html
+++ b/user.html
@@ -69,12 +69,12 @@
 			</div>
 			<div class="user_state">
 				<div>
-					<span>我的余额：</span>
-					<span>1000</span>
+					<div>我的余额</div>
+					<div class="mui-ellipsis">1000</div>
 				</div>
 				<div>
-					<span>提现中：</span>
-					<span>600</span>
+					<div>提现中</div>
+					<div class="mui-ellipsis">600</div>
 				</div>
 			</div>
 		</figure>
